--- a/assets/sass/partials/modules/_overlay.scss
+++ b/assets/sass/partials/modules/_overlay.scss
@@ -12,7 +12,7 @@
   background-color:#000;
   opacity:0.5;
   z-index:100;
-  display: 'none';
+  display: none;
 }
 
 // 中间悬浮框
@@ -22,7 +22,7 @@
   z-index:101;
   padding:0.5em;
   background:#fff;
-  display: 'none';
+  display: none;
 }
 
 .o-overlay-dlg__head {
