--- a/assets/sass/profile/account.scss
+++ b/assets/sass/profile/account.scss
@@ -9,13 +9,13 @@
 
 .c-uc-chg-head {
   border-radius: 0.25em 0.25em 0 0;
-  background: #ccc;
-  border: 1px solid #ccc;
+  background: $bd-light;
+  border: 1px solid $bd-normal;
   padding: 0.5em 1em;
 }
 
 .c-uc-acc-chg {
-  border: 1px solid #ccc;
+  border: 1px solid $bd-normal;
   border-top: none;
   padding: 0.5em 1em;
   margin-bottom: 1em;
@@ -30,6 +30,7 @@
   overflow: hidden;
 
   & > input {
+    position: absolute;
     left: 0;
     top: 0;
     opacity: 0.001;
@@ -87,6 +88,8 @@ $edge_border_width: 2px;
   position: absolute;
   overflow: hidden;
   z-index: 1001;
+
+  & > img { position: absolute; }
 }
 
 // 中间拖动区域
