--- a/assets/sass/user.scss
+++ b/assets/sass/user.scss
@@ -4,7 +4,7 @@
  ***** 登录框 ****
  *****************/
 .c-login-box {
-  margin: 16px auto auto 0;
+  margin: 1em auto;
   width: 50%;
   padding: 1em;
   border: 1px solid #aaa;
