--- a/views/jobs/index.pug
+++ b/views/jobs/index.pug
@@ -3,7 +3,7 @@ block content
   //- 搜索框
   form.c-jobs-search-fm(action='/jobs' method='get')
     .c-jobs-search-fm__field-grp
-      span.c-jobs-search-fm__field
+      span.c-jobs-search-fm__field.u-fir-span
         label(for='title') 职位名称：
         input(type='text' id='title' name='title' value=title class='o-fm-ctl-hr')
 
@@ -15,11 +15,11 @@ block content
             option(value=b selected=b == business)= b 
 
     .c-jobs-search-fm__field-grp
-      span.c-jobs-search-fm__field
+      span.c-jobs-search-fm__field.u-fir-span
         label(for='address') 工作地点：
         input(type='text', name='address', id='address', value=address, class='o-fm-ctl-hr')
 
-      span.c-jobs-search-fm__submit
+      span.c-jobs-search-fm__field
         input(type='submit', value='搜索', class='o-btn o-btn-normal')
 
   //- 职位列表
