--- a/views/home/_welcome_signup.pug
+++ b/views/home/_welcome_signup.pug
@@ -1,8 +1,8 @@
 .c-home-welcome.u-content
   .c-home-welcome__slogan.larger-font
-    h2 有效的学习和实习方式？
-    div 通过问答，在企业和学生之间建立能力评估模型
-    div 不做象牙塔里的学霸，解决问题才是王道
+    h1 有效的学习和实习方式？
+    h3 通过问答，在企业和学生之间建立能力评估模型
+    h3 不做象牙塔里的学霸，解决问题才是王道
 
   form(method='post', action='/signup_step1' class='c-home-welcome__signup js-home-signup-form')
     input(type='hidden', name='step', value='1')
