--- a/views/profile/_student.pug
+++ b/views/profile/_student.pug
@@ -31,4 +31,4 @@ script.
   .o-fm-ctl-hint.
     可以提供简单描述及相关的链接，让公司可以通过链接查看详细说明，如：<br/>
     大三下学期和几个同学一起尝试给电冰箱开发智能控制app，通过app可以查看和控制冰箱的基本状态，如温度，湿度等，
-    相关的创作过程和成果在：#[a(href='http://github.com/xxxxx/xxx_app.git') http://github.com/xxxxx/xxx_app.git]
+    相关的创作过程和成果在：http://github.com/xxxxx/xxx_app.git
