--- a/assets/sass/partials/common/_form.scss
+++ b/assets/sass/partials/common/_form.scss
@@ -67,6 +67,7 @@
   width: 50%;
   cursor: pointer;
   text-align: center;
+  font-weight: normal;
 
   &:first-of-type { border-radius: 4px 0 0 4px; }
   &:last-of-type { border-radius: 0 4px 4px 0; }
