--- a/views/profile/_company.pug
+++ b/views/profile/_company.pug
@@ -30,5 +30,5 @@
 
 .o-fm-grp
   label(for='desc' class='label label-input') 介绍：
-  textarea(name='desc' id='desc' rows=8 class='o-fm-ctl js-rich-editor js-change-field' data-ori-value=user.desc)= user.desc
+  textarea(name='desc' id='desc' rows=8 class='js-rich-editor js-change-field' data-ori-value=user.desc)= user.desc
   +buttons
