--- a/views/questions/edit.pug
+++ b/views/questions/edit.pug
@@ -3,12 +3,13 @@ append css
   link(href=assetHashPath("question/new_edit.css"), rel="stylesheet")
 append js
   script(src=assetHashPath('question/new_edit.js'))
-  script(src='/ckeditor/ckeditor.js')
+  script(src='http://assets.mysite.com/ueditor/ueditor.config.js')
+  script(src='http://assets.mysite.com/ueditor/ueditor.all.js')
 block content
   .c-ques-n-e
     .c-ques-common-head
-      span.fir-span 您正在为职位
-      a.fir-span(href='/job/' + job.id)= job.title
+      span.u-fir-span 您正在为职位
+      a.u-fir-span(href='/job/' + job.id)= job.title
       span 修改一道试题：
 
     - var uri = '/job/' + job.id + '/question/' + question.id + '/update'
@@ -36,7 +37,7 @@ block content
 
       .o-fm-grp
         label(for='content') 题目内容：
-        textarea(name='content', id='content' class='o-fm-ctl js-rich-editor', required)= question.content
+        textarea(name='content', id='content' class='js-rich-editor', required)= question.content
 
       .o-fm-grp.text-center
         input(type='submit', value='保 存' class='o-btn o-btn-primary')
