--- a/assets/sass/job.scss
+++ b/assets/sass/job.scss
@@ -1,6 +1,7 @@
 @import 'partials/common/index';
 @import 'partials/modules/pager';
 @import 'partials/modules/popup_tab';
+@import 'partials/modules/overlay';
 
 
 /*****************
