--- a/views/jobs/new.pug
+++ b/views/jobs/new.pug
@@ -1,46 +1,40 @@
 extends _layout.pug
 append js
-  script(src='/ckeditor/ckeditor.js')
+  script(src='http://assets.mysite.com/ueditor/ueditor.config.js')
+  script(src='http://assets.mysite.com/ueditor/ueditor.all.js')
 block content
   form(method='post', action='/jobs', class='c-job-ne-fm js-job-ne-fm')
     .c-job-ne-fm__head.u-large-font 创建职位
 
     .o-fm-grp
       label(for='title') 职位名称：
-      input(type='text', name='title', id='title', class='o-fm-ctl' autofocus, required)
+      input(type='text', name='title', id='title', class='o-fm-ctl' autofocus)
 
     .o-fm-grp
       label(for='address') 工作地点：
-      input(type='text', name='address', id='address', class='o-fm-ctl', required)
+      input(type='text', name='address', id='address', class='o-fm-ctl')
 
     .o-fm-grp
       label(for='salary') 薪资：
-      select(name='salary', id='salary' class='o-fm-ctl', required)
+      select(name='salary', id='salary' class='o-fm-ctl')
         option(value='' selected) 请选择
         each s, i in salaries
           option(value=i)= s 
 
     .o-fm-grp
       label(for='business') 行业：
-      select(name='business', id='business' class='o-fm-ctl' required)
+      select(name='business', id='business' class='o-fm-ctl')
         option(value='' selected) 请选择
         each b in businesses
           option(value=b)= b 
 
     .o-fm-grp
-      label(for='type') 类别：
-      select(name='type', id='type' class='o-fm-ctl', required)
-        option(value='' selected) 请选择
-        each t in types
-          option(value=t)= t 
-
-    .o-fm-grp
       label(for='duty') 职责：
-      textarea(name='duty', id='duty', class='o-fm-ctl js-rich-editor', rows=12)
+      textarea(name='duty', id='duty', class='js-rich-editor')
 
     .o-fm-grp
       label(for='requirement') 要求：
-      textarea(name='requirement', id='requirement', class='o-fm-ctl js-rich-editor', rows=12)
+      textarea(name='requirement', id='requirement', class='js-rich-editor')
 
     .o-fm-grp
       label(for='notes') 备注：
