--- a/views/user/_signup_step2.pug
+++ b/views/user/_signup_step2.pug
@@ -4,4 +4,4 @@ form(method='post', action='/signup_step2', class='c-signup-step-fm', id='signup
   else
     include _company_signup_detail.pug
   .o-fm-grp
-    input(type='submit', value='保 存' class='btn-primary')
+    input(type='submit', value='保 存' class='o-btn o-btn-primary')
