--- a/views/user/_student_signup_detail.pug
+++ b/views/user/_student_signup_detail.pug
@@ -2,30 +2,30 @@
 script.
   window.ms = !{JSON.stringify(majors)};
 
-.form-group
-  label(for='university' class='label label-input') 学校名称：
-  input(type='text', name='university', id='university', class='form-control', required)
+.o-fm-grp
+  label(for='university') 学校名称：
+  input(type='text', name='university', id='university', class='o-fm-ctl')
 
-.form-group
-  label(for='major' class='label label-input') 专业：
-  input(type='text', name='major', id='major', class='form-control', required)
+.o-fm-grp
+  label(for='major') 专业：
+  input(type='text', name='major', id='major', class='o-fm-ctl')
 
-.form-group
-  label(for='entryDate' class='label label-input') 入学年份：
-  select(name='entryDate', id='entryDate', class='form-control', required)
+.o-fm-grp
+  label(for='entryDate') 入学年份：
+  select(name='entryDate', id='entryDate', class='o-fm-ctl')
     each ed in entryDates
       option(value=ed)= ed 
 
-.form-group
-  label(for='careerPlan' class='label label-input') 职业规划：
-  textarea(name='careerPlan', id='careerPlan', rows=8, class='form-control rich-editor', data-rule-required='true')
-  .form-control-hint.
+.o-fm-grp
+  label(for='careerPlan') 职业规划：
+  textarea(name='careerPlan', id='careerPlan', class='js-rich-editor')
+  .o-fm-ctl-hint.
     职业规划有助于企业更加了解你，也是自己对未来职业的一个规划。简单来说就是你毕业之后想做什么，有什么目标，具体的行动计划等等
 
-.form-group
-  label(for='zuopin' class='label label-input') 课外作品（可选）：
-  textarea(name='zuopin', id='zuopin', rows=8, class='form-control rich-editor')
-  .form-control-hint.
+.o-fm-grp
+  label(for='zuopin') 课外作品（可选）：
+  textarea(name='zuopin', id='zuopin', class='js-rich-editor')
+  .o-fm-ctl-hint.
     课外作品是大学时期很重要的实践活动，也是很重要的加分项，建议去做并写上
     可以提供简单描述及相关的链接，让公司可以通过链接查看详细说明，如：<br/>
     大三下学期和几个同学一起尝试给电冰箱开发智能控制app，通过app可以查看和控制冰箱的基本状态，如温度，湿度等，相关的创作过程和成果在：http://github.com/xxxxx/xxx_app.git
