--- a/views/user/signupView.pug
+++ b/views/user/signupView.pug
@@ -1,6 +1,7 @@
 extends _layout.pug
 append js
-  script(src='/ckeditor/ckeditor.js')
+  script(src='http://assets.mysite.com/ueditor/ueditor.config.js')
+  script(src='http://assets.mysite.com/ueditor/ueditor.all.js')
 block content
   .u-larger-font
     | 加入学做网， 更快找到实习岗位，更好学习专业知识， 快速锁定优秀毕业生：
