--- a/assets/sass/home.scss
+++ b/assets/sass/home.scss
@@ -6,21 +6,21 @@
 .c-home-welcome {
   display: flex;
   align-items: center;
-  padding: 32px 0;
   border-bottom: 2px solid $bd-light;
 }
 
 // 标语
 .c-home-welcome__slogan {
   flex: 1;
+  text-align: center;
   line-height:2em;
-  margin-right:1em;
 }
 
 // 注册框
 .c-home-welcome__signup {
   flex: 1;
-  margin-left: 1em;
+
+  .o-fm-ctl { margin-top: 0; }
 }
 
 
@@ -29,22 +29,13 @@
  */
 .c-home-second-wel {
   display: flex;
-  justify-content: space-around;
-  padding: 32px 0;
+  margin-top: 16px;
 }
 
-.c-home-second-wel__part {
-  display: flex;
-  flex-flow: column;
-  padding: 0 1em;
-}
-
-.c-home-second-wel__todo-list {
-  margin: 0.5em 0;
+.c-home-hot-part {
   flex: 1;
 }
 
-.c-home-second-wel__todo-list__item {
-  margin: 1em 0;
-  font-weight: bold;
+.c-home-hot-item {
+  padding-top: 0.5em;
 }
