change site name

--- a/views/home/_welcome_signup.pug
+++ b/views/home/_welcome_signup.pug
@@ -23,4 +23,4 @@
       label.o-fm-ctl.is-radio-label(for='user-type-company') 公司
 
     .o-fm-grp
-      input(type='submit', value='加入学做网' class='o-btn o-btn-primary' style={width: '100%'})
+      input(type='submit', value='加入实习网' class='o-btn o-btn-primary' style={width: '100%'})
