--- a/views/layouts/_head.pug
+++ b/views/layouts/_head.pug
@@ -1,6 +1,6 @@
 .c-header__inner.u-content
   - var cu = currentUser
-  a.u-larger-font.u-bold-text.c-header__inner__site-logo(href='/') 学做网
+  a.u-larger-font.u-bold-text.c-header__inner__site-logo(href='/') 实习网
 
   if cu
     if cu.type == 0
