--- a/views/user/signupView.pug
+++ b/views/user/signupView.pug
@@ -4,7 +4,7 @@ append js
   script(src='http://assets.mysite.com/ueditor/ueditor.all.js')
 block content
   .u-larger-font
-    | 加入学做网， 更快找到实习岗位，更好学习专业知识， 快速锁定优秀毕业生：
+    | 加入实习网， 更快找到实习岗位，更好学习专业知识， 快速锁定优秀毕业生：
 
   .c-signup-progress
     .c-signup-progress__step(class={'is-active': step == 1}) 创建账号
