--- a/views/answers/new.pug
+++ b/views/answers/new.pug
@@ -1,7 +1,6 @@
 extends _layout.pug
 append js
-  script(src='http://assets.mysite.com/ueditor/ueditor.config.js')
-  script(src='http://assets.mysite.com/ueditor/ueditor.all.js')
+  include ../share/_ueditor_js.pug
 block content
   .c-answer-head
     a.c-answer-head__job-link(href='/job/' + job.id)= job.title
