--- a/views/user/signupView.pug
+++ b/views/user/signupView.pug
@@ -1,7 +1,6 @@
 extends _layout.pug
 append js
-  script(src='http://assets.mysite.com/ueditor/ueditor.config.js')
-  script(src='http://assets.mysite.com/ueditor/ueditor.all.js')
+  include ../share/_ueditor_js.pug
 block content
   .u-larger-font
     | 加入实习网， 更快找到实习岗位，更好学习专业知识， 快速锁定优秀毕业生：
