--- a/views/share/_ueditor_js.pug
+++ b/views/share/_ueditor_js.pug
@@ -1,2 +1,2 @@
-script(src=`${gConfig.assets_path}/ueditor/ueditor.config.js`)
-script(src=`${gConfig.assets_path}/ueditor/ueditor.all.min.js`)
+script(src=`${gConfig.assets_host}/ueditor/ueditor.config.js`)
+script(src=`${gConfig.assets_host}/ueditor/ueditor.all.min.js`)
