--- a/views/questions/edit.pug
+++ b/views/questions/edit.pug
@@ -26,8 +26,8 @@ block content
 
       .o-fm-grp
         label(for='labels') 标签：
-        .labels-wrapper
-          input-labels(input-id='labels' search-url='/qlabels' add-url='/qlabels' init-labels=question.labels)
+        div(id='labels-wrapper')
+          input-labels(input-id='labels' search-url='/qlabels/search' add-url='/qlabels' init-labels=question.labels.join(','))
 
       .o-fm-grp
         label(for='level') 难度：
