--- a/assets/sass/partials/modules/_popup_list.scss
+++ b/assets/sass/partials/modules/_popup_list.scss
@@ -1,33 +1,38 @@
 /* popup list */
-.popuplist-container {
+.o-pl {
   background-color: #fff;
   border: 1px solid #aaa;
   z-index: 1000;
+}
 
-  .popuplist-searchbar {
-    padding: 0.6em;
-    border-bottom: 1px solid #aaa;
+.o-pl__search {
+  padding: 0.6em;
+  border-bottom: 1px solid #aaa;
 
-    input {
-      width: 100%;
-      display: inline-block;
-      border: 1px solid #ccc;
-      outline: none;
-      padding: 0.4em;
-      border-radius: 4px;
-      color: #777;
-      &:focus {
-        box-shadow: inset 0 0 1px rgba(0,200,0,.75);
-      }
+  input {
+    width: 100%;
+    display: inline-block;
+    border: 1px solid #ccc;
+    outline: none;
+    padding: 0.4em;
+    border-radius: 4px;
+    color: #777;
+
+    &:focus {
+      box-shadow: inset 0 0 1px rgba(0,200,0,.75);
     }
   }
+}
 
-  li {
-    padding: 0.2em 0.6em;
-    cursor: pointer;
+.o-pl__item {
+  padding: 0.2em 0.6em;
+  cursor: pointer;
+
+  &.is-active {
+    background-color: #aaa;
   }
 
-  li:hover, .popuplist-item-active {
+  &:hover {
     background-color: #aaa;
   }
 }
