--- a/views/profile/account.pug
+++ b/views/profile/account.pug
@@ -18,24 +18,23 @@ block right_content
     .o-overlay-mount
       popup-overlay(v-on:ok='onOk' ref='po')
         span(slot='head') 裁剪并替换新的头像
-        div(slot='body')
-          .c-ava-crop-area.js-ava-crop-area
-            img.c-ava-crop-area__ori-img.js-origin-img
-            .c-ava-crop-area__ret-img.js-crop-area
-              img.js-ret-img
-            .c-ava-crop-area__move-area.js-crop-edge.js-move-area
-            .c-ava-crop-area__left-edge.js-crop-edge.js-left-edge
-            .c-ava-crop-area__top-edge.js-crop-edge.js-top-edge
-            .c-ava-crop-area__right-edge.js-crop-edge.js-right-edge
-            .c-ava-crop-area__bottom-edge.js-crop-edge.js-bottom-edge
-            .c-ava-crop-area__tl-corner.js-crop-edge.js-tl-corner
-            .c-ava-crop-area__tm-corner.js-crop-edge.js-tm-corner
-            .c-ava-crop-area__tr-corner.js-crop-edge.js-tr-corner
-            .c-ava-crop-area__lm-corner.js-crop-edge.js-lm-corner
-            .c-ava-crop-area__rm-corner.js-crop-edge.js-rm-corner
-            .c-ava-crop-area__bl-corner.js-crop-edge.js-bl-corner
-            .c-ava-crop-area__bm-corner.js-crop-edge.js-bm-corner
-            .c-ava-crop-area__br-corner.js-crop-edge.js-br-corner
+        .c-ava-crop-area.js-ava-crop-area(slot='body')
+          img.c-ava-crop-area__ori-img(:src='originImgPath')
+          .c-ava-crop-area__ret-img.js-crop-area
+            img.js-ret-img(:src='originImgPath')
+          .c-ava-crop-area__move-area.js-crop-edge.js-move-area
+          .c-ava-crop-area__left-edge.js-crop-edge.js-left-edge
+          .c-ava-crop-area__top-edge.js-crop-edge.js-top-edge
+          .c-ava-crop-area__right-edge.js-crop-edge.js-right-edge
+          .c-ava-crop-area__bottom-edge.js-crop-edge.js-bottom-edge
+          .c-ava-crop-area__tl-corner.js-crop-edge.js-tl-corner
+          .c-ava-crop-area__tm-corner.js-crop-edge.js-tm-corner
+          .c-ava-crop-area__tr-corner.js-crop-edge.js-tr-corner
+          .c-ava-crop-area__lm-corner.js-crop-edge.js-lm-corner
+          .c-ava-crop-area__rm-corner.js-crop-edge.js-rm-corner
+          .c-ava-crop-area__bl-corner.js-crop-edge.js-bl-corner
+          .c-ava-crop-area__bm-corner.js-crop-edge.js-bm-corner
+          .c-ava-crop-area__br-corner.js-crop-edge.js-br-corner
 
   //- 账号修改
   .c-uc-chg-head 修改账号信息
