--- a/assets/sass/partials/common/_form.scss
+++ b/assets/sass/partials/common/_form.scss
@@ -55,6 +55,10 @@ label.u-input-error {
   &:focus { border-color: $bd-focus; }
 }
 
+textarea.o-fm-ctl {
+  height: auto;
+}
+
 // 隐藏默认的radio
 .o-hidden-radio {
   position: absolute;
