--- a/views/answers/index.pug
+++ b/views/answers/index.pug
@@ -9,32 +9,34 @@ block content
   if !answers.length
     .c-none-answer-hint.u-error-result 暂时没有求职者做解答
   else
+    h4 解答列表：
     each answer in answers
       - var user = answer._user
-      .js-list-answer(data-score=answer.score data-comment=answer.comment data-qid=question.id data-aid=answer.id)
-        .u-smaller-font.u-less-imp
-          span.c-list-answer-user-info
-            span #[a.u-bold-text(href='/user/' + user.id)= user.name]
-            span= user.university
-            span= user.major
+      .c-list-answer.js-list-answer(data-score=answer.score
+                      data-comment=answer.comment
+                      data-qid=question.id
+                      data-aid=answer.id)
+        .c-list-answer__head.u-smaller-font.u-less-imp
+          span #[a.u-bold-text(href='/user/' + user.id)= user.name]
+          span= user.university
+          span= user.major
           span 创建时间：#{answer.createdAt.toLocaleDateString()}
           span 最后更新时间：#{answer.updatedAt.toLocaleDateString()}
-        .u-small-font!= answer.content
-        div
+        .c-list-answer__content.u-small-font!= answer.content
+        .c-list-answer__foot
           if answer.isScored
             span.u-fir-span.u-success-result 你对此解答的当前评分：#{answer.score} 分
             button.o-btn.o-btn-normal.js-re-score 重新评分
           else
             button.o-btn.o-btn-primary.js-to-score 为此解答评分
-
-  //- 评分悬浮框
-  .o-overlay-mount
-    popup-overlay(v-on:ok='onOk' ref='po')
-      div(slot='body')
-        .o-fm-grp
-          label(for='score') 分数：
-          input(type='text', name='score' id='score' v-model.number='score'  placeholder='0 ~ 100' class='o-fm-ctl')
-          .o-fm-ctl-hint 取值范围：0 ~ 100
-        .o-fm-grp
-          label(for='comment') 评语：
-          textarea(name='comment', id='comment', v-model.trim= 'comment' class='o-fm-ctl')
+    //- 评分悬浮框
+    .o-overlay-mount(style={ display: 'none' })
+      popup-overlay(v-on:ok='onOk' ref='po')
+        div(slot='body')
+          .o-fm-grp
+            label(for='score') 分数：
+            input(type='text', name='score' id='score' v-model.number='score'  placeholder='0 ~ 100' class='o-fm-ctl')
+            .o-fm-ctl-hint 取值范围：0 ~ 100
+          .o-fm-grp
+            label(for='comment') 评语：
+            textarea(name='comment', id='comment', v-model.trim= 'comment' class='o-fm-ctl u-small-font' rows='5')
